--- a/ColorGameProject/colorGame.css
+++ b/ColorGameProject/colorGame.css
@@ -1,5 +1,7 @@
 body {
     background: #232323;
+    margin: 0;
+    font-family: "Arial";
 }
 
 .square{
@@ -8,17 +10,64 @@ body {
     padding-bottom: 30%;
     float: left;
     margin: 1.66%;
+    border-radius: 15%;
+    transition: background 0.6s;
+    -webkit-transition: background 0.6s;
+    -moz-transition: background 0.6s;
 }
 
 #container{
-    margin: 0 auto;
+    margin: 20px auto;
     max-width: 600px;
 }
 
 h1{
+    text-align: center;
+    line-height: 1.1;
+    padding: 20px 0;
+    font-weight: normal;
     color: white;
+    background-color: steelblue;
+    margin: 0;
+    text-transform: uppercase;
 }
 
-span{
+#stripe{
+    background-color: white;
+    height: 30px;
+    text-align: center;
+    color: black;
+}
+
+.selected{
     color: white;
+    background: steelblue;
+}
+
+#colorDisplay{
+    font-size: 200%;
+}
+
+button{
+    border: none;
+    background: none;
+    text-transform: uppercase;
+    height: 100%;
+    font-weight: 700;
+    color: steelblue;
+    letter-spacing: 1px;
+    font-size: inherit;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+}
+
+button:hover{
+    color: white;
+    background: steelblue;
+}
+
+#message{
+    display: inline-block;
+    width: 20%;
 }
