--- a/ColorGameProject/colorGame.css
+++ b/ColorGameProject/colorGame.css
@@ -60,6 +60,7 @@ button{
     transition: all 0.3s;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
+    outline: none;
 }
 
 button:hover{
