Finished Partials lessons

--- a/FirstEjs/views/love.ejs
+++ b/FirstEjs/views/love.ejs
@@ -1,3 +1,6 @@
+<% include partials/header %>
+
+
 <h1>You fell in love with: <%=thingVar%> </h1>
 
 <% if(thingVar.toLowerCase()==="rusty"){ %>
@@ -8,3 +11,5 @@
 
 
 <p>P.S. this is the love.ejs file</p>
+
+<% include partials/footer %>
