--- a/FirstEjs/views/posts.ejs
+++ b/FirstEjs/views/posts.ejs
@@ -1,3 +1,5 @@
+<% include partials/header %>
+
 <h1>The Posts Page</h1>
 
 <% for(var i = 0;i < posts.length; i++){ %>
@@ -9,3 +11,5 @@
         <%= post.title %> - <strong><%= post.author %></strong>
     </li>
 <% }); %>
+
+<% include partials/footer %>
